# CourseProject

./: .gitignore  Makefile  README.md  docker-compose.yaml  go.mod  go.sum
auth_service/: Dockerfile  main.go
auth_service/cmd/app/: main.go
auth_service/cmd/log/: logs.info
auth_service/config/: config.go  local.yaml
auth_service/internal/app/: app.go
auth_service/internal/database/: refresh_storage.go  user_storage.go  verify_code_storage.go
auth_service/internal/database/migrations/: 20241031125854_new_user_table.sql
auth_service/internal/delivery/: app.go  server.go
auth_service/internal/delivery/handlers/: auth.go  auth_handlers.go  password_recovery.go  recovery_handlers.go  refresh_tokens.go  token_handlers.go
auth_service/internal/delivery/middleware/: check_auth.go  middleware.go
auth_service/internal/delivery/router/: auth.go  routers.go  tokens.go
auth_service/internal/entity/: refresh.go  responses.go  user.go  verify_code.go
auth_service/internal/handlers/: auth_handlers.go
auth_service/internal/transport/handlers/: auth_handlers.go  token_handlers.go
auth_service/internal/transport/middleware/: check_auth.go
auth_service/pkg/auth/: email_manager.go  token_manager.go
auth_service/pkg/db/: postgres.go
auth_service/pkg/log/: log.go
auth_service/pkg/managers/: email_manager.go  token_manager.go
cmd/: .gitignore  CMakeLists.txt
cmd/api/: Navigator.hpp
cmd/app/: main.cpp
cmd/include/: servisesURIs.hpp
cmd/include/login/: login.hpp
cmd/include/profile/: ProfileController.hpp
cmd/src/: LoginController.cpp  ProfileController.cpp  login.cpp
courses/: CMakeLists.txt  config.json
courses/app/: main.cpp
courses/datastructures/: Database.hpp  Logclass.hpp
courses/include/cntrlr/: cntrlr.hpp
courses/src/: cntrlr.cpp
docs/: docs.go  swagger.json  swagger.yaml
face_verification/: README.md  database.py  main.py  utils.py
face_verification/embeddings/: 1.npy
nginx/: nginx.conf
pkg/: connect_to_db.go  postgres.go
rag/: main.py  qa_service.py  search_similar.py  text_processor.py  translator.py  vector_store_handler.py
rag/bot/: bot.py  config.py  main_bot.py  utils.py
tests/auth/: Dockerfile  auth_tests.py
